--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -12,41 +12,23 @@
 			<form #newDocForm="ngForm" (submit)="resetPassword()">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
 
-
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10 center-align logo">
-						<img src="../../logo.png" alt="">
+						<img src="../images/logo.png" alt="">
 					</div>
 
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-						<p class="alert alert-danger" *ngIf="error">Username/Email does not exist!</p>
-						<p class="alert alert-success" *ngIf="success">Please check your email.</p>
-					</div>
-
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12" *ngIf="!success">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-							<md-input class="" autocomplete="off" name="username" placeholder="Username/Email" [(ngModel)]="username" type="text" required></md-input>
+							<md-input-container>   <input mdInput class="" autocomplete="off" name="username" #userName  placeholder="Username/Email" [(ngModel)]="username" type="text" required></md-input-container>
 						</div>
 
-						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align" *ngIf="!loading">
+						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align">
 							<button md-raised-button class="btn-save green500 btn-login" type="submit" value="Submit">Submit</button>
 						</div>
 
-						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align" *ngIf="loading">
-							<button md-raised-button class="btn-save green500 btn-login" type="button" disabled><div class="loader-small"></div></button>
-						</div>
-
 					</div>
-
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 center-align" *ngIf="success">
-						<a (click)="navigateTo('login')"> <button md-raised-button class="btn-save green500 btn-login" type="button">Go to Login</button></a>
-					</div>
-
 				</div>
-
 			</form>
-
 		</md-card-content>
 	</md-card>
-
 </div>
