--- a/src/app/job-allocations/job-allocations.component.html
+++ b/src/app/job-allocations/job-allocations.component.html
@@ -14,32 +14,35 @@
 				</md-toolbar>
 				<div class="search col-md-12" *ngIf="showSearch.checked">
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="fromDate" placeholder="From Date" [(ngModel)]="SearchItem.FromDate" type="date"></md-input>
+						<md-input-container>   <input mdInput class="" name="fromDate" placeholder="From Date" [(ngModel)]="SearchItem.FromDate" type="date"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="toDate" placeholder="To Date" [(ngModel)]="SearchItem.ToDate" type="date"></md-input>
+						<md-input-container>   <input mdInput class="" name="toDate" placeholder="To Date" [(ngModel)]="SearchItem.ToDate" type="date"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="client" placeholder="Client" [(ngModel)]="SearchItem.Client" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="client" placeholder="Client" [(ngModel)]="SearchItem.Client" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="doctor" placeholder="Doctor" [(ngModel)]="SearchItem.Doctor" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="doctor" placeholder="Doctor" [(ngModel)]="SearchItem.Doctor" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="MT" placeholder="MT" [(ngModel)]="SearchItem.MT" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="MT" placeholder="MT" [(ngModel)]="SearchItem.MT" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="AQA" placeholder="AQA" [(ngModel)]="SearchItem.AQA" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="AQA" placeholder="AQA" [(ngModel)]="SearchItem.AQA" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="QA" placeholder="QA" [(ngModel)]="SearchItem.QA" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="QA" placeholder="QA" [(ngModel)]="SearchItem.QA" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="status" placeholder="Status" [(ngModel)]="SearchItem.Status" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="status" placeholder="Status" [(ngModel)]="SearchItem.JobStatus" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<button md-raised-button type="submit" value="Submit" (click)="search()">Search</button>
+						<md-input-container>   <input mdInput class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SearchItem.JobNumber" type="text"></md-input-container>
 					</div>
+						<button md-raised-button type="submit" value="Submit" style="margin:0 !important" (click)="search()">Search</button>
+						<button md-raised-button type="submit" value="Clear" style="margin:0 !important" (click)="clearSearch()">Clear</button>
+					
 
 				</div>
 			</div>
@@ -62,10 +65,10 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr *ngFor="let job of Jobs" [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1"
+						<tr *ngFor="let job of Jobs , let i=index" [class.bg-red]="job.Color==3" [class.bg-yellow]="job.Color==2" [class.bg-white]="job.Color==1"
 						 [class.bg-green]="job.Color==0">
 							<td>{{job.JobDate}}</td>
-							<td>{{job.JobNumber}}</td>
+							<td [title]="job.OriginalFileName">{{job.JobNumber}}</td>
 							<td>{{job.Duration}}</td>
 							<td title={{job.Client}}>{{job.ClientShortName}}</td>
 							<td>{{job.Doctor}}</td>
@@ -73,9 +76,10 @@
 							<td>{{job.AQA}}</td>
 							<td>{{job.QA}}</td>
 							<td>{{job.TAT}}</td>
-							<td>{{job.Status}}</td>
-							<td><span class="glyphicon glyphicon-pencil pointer" (click)="editAllocation(job)" title="Edit"></span></td>
-							<td><span class="glyphicon glyphicon-resize-full pointer" (click)="splitJob(job)" title="Split"></span></td>
+							<td>{{job.JobStatus}}</td>
+							<td><span *ngIf="job.JobStatus != 'Completed' && job.JobStatus != 'Downloaded'" class="glyphicon glyphicon-pencil pointer" (click)="editAllocation(i)" title="Edit"></span></td>
+							<!--<td><span *ngIf="job.JobStatus != 'Completed' && job.JobStatus != 'Downloaded' && job.JobStatus != 'No Dictation' && job.JobStatus != 'Repeat' && job.JobStatus!='NYS' && job.JobStatus!='Pending at AQA' && job.JobStatus!='Pending at QA'" class="glyphicon glyphicon-resize-full pointer" (click)="splitJob(i)" title="Split"></span></td>-->
+							<td><span *ngIf="job.JobStatus=='NYS' || job.JobStatus=='Pending at MT'" class="glyphicon glyphicon-resize-full pointer" (click)="splitJob(i)" title="Split"></span></td>
 						</tr>
 					</tbody>
 				</table>
@@ -92,59 +96,59 @@
 		<md-card-content class="p0">
 			<div>
 				<md-toolbar class="toolbar-small" color="primary">
-					<div class="col-xs-12 p0 m0"><span>Allocate Job</span> <button md-raised-button class="pull-right btn-small" (click)="closeEditAllocationModal()"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
+					<div class="col-xs-12 p0 m0"><span>Allocate Job</span> <button md-raised-button class="pull-right btn-small" (click)="EditAllocationModal=!EditAllocationModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
 				</md-toolbar>
 				<form #newDocForm="ngForm" (submit)="updateAllocation()">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 p0 bg-white">
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mbottom10 ptop10 bg-brown">
 							<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-								<md-input class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input>
+								<md-input-container>   <input mdInput class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input-container>
 							</div>
 
 							<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-								<md-input class="" name="jobDate" placeholder="JobDate" [(ngModel)]="SelectedJob.JobDate" type="text" disabled></md-input>
+								<md-input-container>   <input mdInput class="" name="jobDate" placeholder="JobDate" [(ngModel)]="SelectedJob.JobDate" type="text" disabled></md-input-container>
 							</div>
 
 							<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-								<md-input class="" name="client" placeholder="Client" title="SeletedJob.Client" [(ngModel)]="SelectedJob.ClientShortName"
-								 type="text" disabled></md-input>
+								<md-input-container>   <input mdInput class="" name="client" placeholder="Client" title="SeletedJob.Client" [(ngModel)]="SelectedJob.ClientShortName"
+								 type="text" disabled></md-input-container>
 							</div>
 
 							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-								<md-input class="" name="doctor" placeholder="Doctor" [(ngModel)]="SelectedJob.Doctor" type="text" disabled></md-input>
+								<md-input-container>   <input mdInput class="" name="doctor" placeholder="Doctor" [(ngModel)]="SelectedJob.Doctor" type="text" disabled></md-input-container>
 							</div>
 						</div>
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 row">
 
 							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-								<md-input class="" name="level" placeholder="Job Level" [(ngModel)]="SelectedJob.JobLevel" type="text" (change)="statusChanged()"
-								 (typeaheadOnSelect)="levelChanged()" [typeaheadMinLength]="0" [typeahead]="['L1','L1-L3','L1-L2-L3']"></md-input>
+								<md-input-container>   <input mdInput class="" name="status" placeholder="Status" [(ngModel)]="SelectedJob.JobStatus" type="text" (change)="statusChanged()"
+								 (typeaheadOnSelect)="statusChanged()" [typeaheadMinLength]="0" [typeahead]="['No Dictation','NYS','Repeat']"></md-input-container>
 							</div>
 
 							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-								<md-input class="" name="status" placeholder="Status" [(ngModel)]="SelectedJob.Status" type="text" (change)="statusChanged()"
-								 (typeaheadOnSelect)="statusChanged()" [typeaheadMinLength]="0" [typeahead]="['No Dictation','Repeat']"></md-input>
+								<md-input-container>   <input mdInput class="" name="level" placeholder="Job Level" [(ngModel)]="SelectedJob.JobLevel" type="text" (change)="statusChanged()"
+								 (typeaheadOnSelect)="levelChanged()" [typeaheadMinLength]="0" [typeahead]="['L1','L1-L3','L1-L2-L3']"></md-input-container>
 							</div>
 
 							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-								<md-input class="" name="defaultTAT" placeholder="Default TAT" [(ngModel)]="SelectedJob.DefaultTAT" type="number" min=0></md-input>
+								<md-input-container>   <input mdInput class="" name="defaultTAT" placeholder="Default TAT" [(ngModel)]="SelectedJob.DefaultTAT" type="number" min=0></md-input-container>
 							</div>
 
 							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="!MTHidden">
-								<md-input class="" name="MT" placeholder="MT" [(ngModel)]="SelectedJob.MT" [typeahead]="Employees" autocomplete="off" type="text"
-								 [disabled]="MTDisabled" (blur)="mtChanged()" (typeaheadOnSelect)="mtChanged()"></md-input>
+								<md-input-container>   <input mdInput class="" name="MT" placeholder="MT" [(ngModel)]="SelectedJob.MT" [typeahead]="Employees" autocomplete="off" type="text"
+								 [disabled]="MTDisabled" (blur)="mtChanged()" (typeaheadOnSelect)="mtChanged()"></md-input-container>
 							</div>
 
 							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="!AQAHidden">
-								<md-input class="" name="AQA" placeholder="AQA" [(ngModel)]="SelectedJob.AQA" [typeahead]="Employees" autocomplete="off"
-								 type="text" [disabled]="AQADisabled" (blur)="aqaChanged()" (typeaheadOnSelect)="aqaChanged()"></md-input>
+								<md-input-container>   <input mdInput class="" name="AQA" placeholder="AQA" [(ngModel)]="SelectedJob.AQA" [typeahead]="Employees" autocomplete="off"
+								 type="text" [disabled]="AQADisabled" (blur)="aqaChanged()" (typeaheadOnSelect)="aqaChanged()"></md-input-container>
 							</div>
 
 							<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="!QAHidden">
-								<md-input class="" name="QA" placeholder="QA" [(ngModel)]="SelectedJob.QA" [typeahead]="Employees" autocomplete="off" type="text"
-								 [disabled]="QADisabled" (blur)="qaChanged()" (typeaheadOnSelect)="qaChanged()"></md-input>
+								<md-input-container>   <input mdInput class="" name="QA" placeholder="QA" [(ngModel)]="SelectedJob.QA" [typeahead]="Employees" autocomplete="off" type="text"
+								 [disabled]="QADisabled" (blur)="qaChanged()" (typeaheadOnSelect)="qaChanged()"></md-input-container>
 							</div>
 
 							<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 center-align">
@@ -171,52 +175,52 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mbottom10 bg-white p0">
 					<div class="row m0 ptop5 main-job-details">
 						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-							<md-input class="" name="jobDate" placeholder="JobDate" [(ngModel)]="SelectedJob.JobDate" type="text" disabled></md-input>
+							<md-input-container>   <input mdInput class="" name="jobDate" placeholder="JobDate" [(ngModel)]="SelectedJob.JobDate" type="text" disabled></md-input-container>
 						</div>
 						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-							<md-input class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input>
+							<md-input-container>   <input mdInput class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input-container>
 						</div>
 						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-							<md-input class="" name="client" placeholder="Client" title="Selected.Client" [(ngModel)]="SelectedJob.ClientShortName" type="text"
-							 disabled></md-input>
+							<md-input-container>   <input mdInput class="" name="client" placeholder="Client" title="Selected.Client" [(ngModel)]="SelectedJob.ClientShortName" type="text"
+							 disabled></md-input-container>
 						</div>
 						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-							<md-input class="" name="doctor" placeholder="Doctor" [(ngModel)]="SelectedJob.Doctor" type="text" disabled></md-input>
+							<md-input-container>   <input mdInput class="" name="doctor" placeholder="Doctor" [(ngModel)]="SelectedJob.Doctor" type="text" disabled></md-input-container>
 						</div>
 						<div class="col-md-1 col-sm-3 col-lg-1 col-xs-12">
-							<md-input class="" name="TAT" placeholder="TAT" [(ngModel)]="SelectedJob.TAT" type="text" disabled></md-input>
+							<md-input-container>   <input mdInput class="" name="TAT" placeholder="TAT" [(ngModel)]="SelectedJob.TAT" type="text" disabled></md-input-container>
 						</div>
 						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-							<md-input class="" name="status" placeholder="Status" [(ngModel)]="SelectedJob.Status" type="text" disabled></md-input>
+							<md-input-container>   <input mdInput class="" name="status" placeholder="Status" [(ngModel)]="SelectedJob.JobStatus" type="text" disabled></md-input-container>
 						</div>
 
 						<div class="col-md-1 col-sm-3 col-lg-1 col-xs-12">
-							<md-input class="" name="splits" placeholder="No of Splits" [(ngModel)]="NoOfSplits" type="text" min=2 max=5 step=1 autocomplete="off"
-							 (change)="splitNumberChange()" (keyup)="splitNumberChange()"></md-input>
+							<md-input-container>   <input mdInput class="" name="splits" placeholder="No of Splits" [(ngModel)]="NoOfSplits" type="text" min=2 max=5 step=1 autocomplete="off"
+							 (change)="splitNumberChange()" (keyup)="splitNumberChange()"></md-input-container>
 						</div>
 					</div>
 					<div class="row m0 split-job-details ">
 						<div class="row m0 ptop5" *ngFor="let newSplitJob of SplitAllocationChildJobs; let i=index">
 							<div class="col-md-1 col-sm-6 col-lg-1 col-xs-12 f11 p8">
-								{{SelectedJobNumber+'_'+(SelectedJobSequenceNumber+i)}}
+								{{SelectedJobNumber+'_'+(SelectedJobSequenceNumber==0?1:SelectedJobSequenceNumber+i)}}
 							</div>
 							<div class="col-md-1 col-sm-6 col-lg-1 col-xs-12">
-								<md-input class="" name="startTime" placeholder="Start Time" [(ngModel)]="newSplitJob.StartTime" type="text"></md-input>
+								<md-input-container>   <input mdInput class="" name="startTime" placeholder="Start Time" [(ngModel)]="newSplitJob.StartTime" type="text"></md-input-container>
 							</div>
 							<div class="col-md-1 col-sm-6 col-lg-1 col-xs-12">
-								<md-input class="" name="endTime" placeholder="End Time" [(ngModel)]="newSplitJob.EndTime" type="text"></md-input>
+								<md-input-container>   <input mdInput class="" name="endTime" placeholder="End Time" [(ngModel)]="newSplitJob.EndTime" type="text"></md-input-container>
 							</div>
 							<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12" *ngIf="!MTHidden">
-								<md-input class="" name="MT" placeholder="MT" [(ngModel)]="newSplitJob.MT" (blur)="employeeForSplitSelected(i,'MT')" (typeaheadOnSelect)="employeeForSplitSelected(i,'MT')" [disabled]="splitMTDisabled"
-								 [typeahead]="Employees" type="text"></md-input>
+								<md-input-container>   <input mdInput class="" name="MT" placeholder="MT" [(ngModel)]="newSplitJob.MT" (typeaheadOnSelect)="employeeForSplitSelected(i,'MT')" [disabled]="splitMTDisabled"
+								 [typeahead]="Employees" type="text"></md-input-container>
 							</div>
 							<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12" *ngIf="!AQAHidden">
-								<md-input class="" name="AQA" placeholder="AQA" [(ngModel)]="newSplitJob.AQA" (blur)="employeeForSplitSelected(i,'AQA')" (typeaheadOnSelect)="employeeForSplitSelected(i,'AQA')" [disabled]="splitAQATDisabled"
-								 [typeahead]="Employees" type="text"></md-input>
+								<md-input-container>   <input mdInput class="" name="AQA" placeholder="AQA" [(ngModel)]="newSplitJob.AQA" (typeaheadOnSelect)="employeeForSplitSelected(i,'AQA')" [disabled]="splitAQATDisabled"
+								 [typeahead]="Employees" type="text"></md-input-container>
 							</div>
 							<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12" *ngIf="!QAHidden">
-								<md-input class="" name="QA" placeholder="QA" [(ngModel)]="newSplitJob.QA" (blur)="employeeForSplitSelected(i,'QA')" (typeaheadOnSelect)="employeeForSplitSelected(i,'QA')" [disabled]="splitQADisabled"
-								 [typeahead]="Employees" type="text"></md-input>
+								<md-input-container>   <input mdInput class="" name="QA" placeholder="QA" [(ngModel)]="newSplitJob.QA" (typeaheadOnSelect)="employeeForSplitSelected(i,'QA')" 
+								 [typeahead]="Employees" type="text"></md-input-container>
 							</div>
 						</div>
 
