--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,9 @@
 .logo{
     height: inherit;
     display: inline-block;
+    a{
+      height: 100%;
+    }
     img{
         height: inherit;
         max-width: 100%;
