--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -14,47 +14,29 @@
 
 
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10 center-align logo">
-						<img src="../../logo.png" alt="">
+						<img src="../images/logo.png" alt="">
 					</div>
-
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-						<p class="alert alert-danger" *ngIf="error.length>0"> {{error}} </p>
-						<p class="alert alert-success" *ngIf="success">Password changed succesfully.</p>
-					</div>
-
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12" *ngIf="!success">
-
+					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-							<md-input class="" autocomplete="off" name="oldPassword" placeholder="Old Password" [(ngModel)]="passwordModel.OldPassword" type="password"
-								required></md-input>
-						</div>
-
-
-						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-							<md-input class="" autocomplete="off" name="password" placeholder="New Password" [(ngModel)]="passwordModel.NewPassword" type="password"
-								required></md-input>
+							<md-input-container> <input mdInput class="" autocomplete="off" name="oldPassword" #oldPassword placeholder="Old Password" [(ngModel)]="passwordModel.OldPassword"
+								 type="password" required></md-input-container>
 						</div>
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-							<md-input class="" autocomplete="off" name="confirmPassword" placeholder="Confirm New Password" [(ngModel)]="passwordModel.ConfirmPassword"
-								type="password" required></md-input>
+							<md-input-container> <input mdInput class="" autocomplete="off" name="password" #password placeholder="New Password" [(ngModel)]="passwordModel.NewPassword"
+								 type="password" required></md-input-container>
 						</div>
 
-						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align" *ngIf="!loading">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
+							<md-input-container> <input mdInput class="" autocomplete="off" name="confirmPassword" #confirmPassword placeholder="Confirm New Password"
+								 [(ngModel)]="passwordModel.ConfirmPassword" type="password" required></md-input-container>
+						</div>
+
+						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align">
 							<button md-raised-button class="btn-save green500 btn-login" type="submit" value="Submit">Submit</button>
-						</div>
-
-						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align" *ngIf="loading">
-							<button md-raised-button class="btn-save green500 btn-login" type="button" disabled><div class="loader-small"></div></button>
-						</div>
+						</div>					
 					</div>
-
-
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 center-align" *ngIf="success">
-					<a (click)="navigateTo('login')">	<button md-raised-button class="btn-save green500 btn-login" type="button">Go to Login</button></a>
-					</div>
-
 
 				</div>
 
