--- a/src/app/client-employee/client-employee.component.html
+++ b/src/app/client-employee/client-employee.component.html
@@ -15,42 +15,42 @@
 </md-toolbar>
 <div class="col-lg-12 col-md-12 col-sm-12 mtb10">
     <div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-        <md-input class="" name="client" #client [(ngModel)]="NewClientEmployee.Client" [typeahead]="clients" autocomplete="off" placeholder="Client"
-            type="text" required [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="client" #client [(ngModel)]="NewClientEmployee.Client" [typeahead]="clients" autocomplete="off" placeholder="Client"
+            type="text" required [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-        <md-input class="" name="firstName" #firstName [(ngModel)]="NewClientEmployee.FirstName" placeholder="First Name" type="text" required
-            maxLength="35" [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="firstName" #firstName [(ngModel)]="NewClientEmployee.FirstName" placeholder="First Name" type="text" required
+            maxLength="35" [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-4 col-lg-3 col-xs-12">
-        <md-input class="" name="middleName" #middleName [(ngModel)]="NewClientEmployee.MiddleName" placeholder="Middle Name" type="text" maxLength="20"
-            [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="middleName" #middleName [(ngModel)]="NewClientEmployee.MiddleName" placeholder="Middle Name" type="text" maxLength="20"
+            [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-        <md-input class="" name="lastName" #lastName [(ngModel)]="NewClientEmployee.LastName" placeholder="Last Name" type="text" required
-            maxLength="35" [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="lastName" #lastName [(ngModel)]="NewClientEmployee.LastName" placeholder="Last Name" type="text" required
+            maxLength="35" [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-        <md-input class="" name="primaryPhone" #primaryPhone [(ngModel)]="NewClientEmployee.PrimaryPhone" placeholder="Primary Phone" type="text"
-            required maxLength="15" [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="primaryPhone" #primaryPhone [(ngModel)]="NewClientEmployee.PrimaryPhone" placeholder="Primary Phone" type="text"
+            required maxLength="15" [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-        <md-input class="" name="secondaryPhone"#secondaryPhone  [(ngModel)]="NewClientEmployee.SecondaryPhone" placeholder="Secondary Phone" type="text"
-            maxLength="15" [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="secondaryPhone"#secondaryPhone  [(ngModel)]="NewClientEmployee.SecondaryPhone" placeholder="Secondary Phone" type="text"
+            maxLength="15" [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-        <md-input class="" name="fax" #fax [(ngModel)]="NewClientEmployee.Fax" placeholder="Fax" type="text" maxLength="15" [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="fax" #fax [(ngModel)]="NewClientEmployee.Fax" placeholder="Fax" type="text" maxLength="15" [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-        <md-input class="" name="email" #email [(ngModel)]="NewClientEmployee.Email" placeholder="Email" type="email" required maxLength="255"
-            [disabled]="!isNewClientEmployee"></md-input>
+        <md-input-container>   <input mdInput class="" name="email" #email [(ngModel)]="NewClientEmployee.Email" placeholder="Email" type="email" required maxLength="255"
+            [disabled]="!isNewClientEmployee"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-        <md-input class="" name="department" #department [(ngModel)]="NewClientEmployee.Department" placeholder="Department" type="text" required
-            maxLength="20" [disabled]="inputDisabled"></md-input>
+        <md-input-container>   <input mdInput class="" name="department" #department [(ngModel)]="NewClientEmployee.Department" placeholder="Department" type="text" required
+            maxLength="20" [disabled]="inputDisabled"></md-input-container>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12" *ngIf="!isNewClientEmployee">
-        <md-checkbox name="active" [(ngModel)]="NewClientEmployee.Active"  >Active </md-checkbox>
+        <md-checkbox name="active" [(ngModel)]="NewClientEmployee.Active"  [disabled]="!isNewClientEmployee">Active </md-checkbox>
     </div>
     <div class="col-md-6 col-sm-12 col-lg-6 col-xs-12 mtop10 center-align">
         <button md-raised-button class="btn-save" [disabled]="inputDisabled">Save</button>
