--- a/src/app/client-license/client-license.component.html
+++ b/src/app/client-license/client-license.component.html
@@ -8,11 +8,11 @@
         <div class="col-lg-12 col-md-12 col-sm-12 mtb10">
           <form (submit)="saveChanges()">          
             <div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-              <md-input class="" name="licenseKey" placeholder="License Key" [(ngModel)]="license.LicenseKey" type="text" autocomplete="off" required min="1" max="10" >
-              </md-input>
+              <md-input-container>   <input mdInput class="" name="licenseKey" #licenseKey placeholder="License Key" [(ngModel)]="license.LicenseKey" type="text" autocomplete="off" required min="1" max="10" >
+              </md-input-container>
             </div>
             <div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-              <md-input class="" name="location" placeholder="Location" [(ngModel)]="license.Location" type="text" autocomplete="off" required [typeahead]="locations" [typeaheadMinLength]="0"></md-input>
+              <md-input-container>   <input mdInput class="" name="location" #location placeholder="Location" [(ngModel)]="license.Location" type="text" autocomplete="off" required [typeahead]="locations" [typeaheadMinLength]="0"></md-input-container>
             </div>   
             <div class="col-md-4 col-sm-12 col-lg-4 col-xs-12 center-align">
               <button md-raised-button class="btn-save" type="submit">Save</button>
