--- a/src/app/client-licenses/client-licenses.component.html
+++ b/src/app/client-licenses/client-licenses.component.html
@@ -4,7 +4,7 @@
             <div>
                 <md-toolbar color="primary" class="mbottom5 toolbar-small">
                     <div class="col-xs-12 p0 m0">
-                        <span>Client Licenses</span>
+                        <span>Client Licenses ({{client}})</span>
                         <button md-raised-button class="pull-right btn-small mright5" (click)="newLicense()"><span class="glyphicon glyphicon-plus text-success" style="padding: 2px 0 4px 2px;"></span></button>
                     </div>
                 </md-toolbar>
@@ -15,28 +15,74 @@
                             <tr table-header>
                                 <th>Location</th>
                                 <th>Key</th>
-                                <th>Download</th>
-                                <th>Upload</th>
-                                <th>Status</th>
+                                <th class="center-align">Download</th>
+                                <th class="center-align">Upload</th>
+                                <th class="center-align">Status</th>
+                                <th></th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let license of licenses">
+                            <tr *ngFor="let license of licenses; let i=index">
                                 <td>{{license.Location}}</td>
                                 <td>{{license.LicenseKey}}</td>
-                                <td *ngIf="license.Download"><span class="glyphicon glyphicon-ok text-success"></span></td>
-                                <td *ngIf="!license.Download"><span class="glyphicon glyphicon-remove text-danger"></span></td>
-                                <td *ngIf="license.Upload"><span class="glyphicon glyphicon-ok text-success"></span></td>
-                                <td *ngIf="!license.Upload"><span class="glyphicon glyphicon-remove text-danger"></span></td>
-                                <td *ngIf="license.Active"><span class="glyphicon glyphicon-ok text-success"></span></td>
-                                <td *ngIf="!license.Active"><span class="glyphicon glyphicon-remove text-danger"></span></td>
-                                <td style="width:94px"><span class="glyphicon glyphicon-refresh pointer" (click)="resetLicense(license.Id)" title="Reset"></span></td>
-                            </tr>
+                                <td class="center-align" *ngIf="license.Download&&license.Disabled"><span class="glyphicon glyphicon-ok text-success"></span></td>
+                                <td class="center-align" *ngIf="!license.Download&&license.Disabled"><span class="glyphicon glyphicon-remove text-danger"></span></td>
+                                <td class="center-align" *ngIf="!license.Disabled"><span><md-slide-toggle [(ngModel)]="license.Download" [disabled]="license.Disabled"></md-slide-toggle></span></td>
+                                <td class="center-align" *ngIf="license.Upload&&license.Disabled"><span class="glyphicon glyphicon-ok text-success"></span></td>
+                                <td class="center-align" *ngIf="!license.Upload&&license.Disabled"><span class="glyphicon glyphicon-remove text-danger"></span></td>
+                                <td class="center-align" *ngIf="!license.Disabled"><md-slide-toggle [(ngModel)]="license.Upload" [disabled]="license.Disabled"></md-slide-toggle></td>
+                                <td class="center-align" *ngIf="license.Active&&license.Disabled"><span class="glyphicon glyphicon-ok text-success"></span></td>
+                                <td class="center-align" *ngIf="!license.Active&&license.Disabled"><span class="glyphicon glyphicon-remove text-danger"></span></td>
+                                <td class="center-align" *ngIf="!license.Disabled"><md-slide-toggle [(ngModel)]="license.Active" [disabled]="license.Disabled"></md-slide-toggle></td>
+                                <td class="center-align" *ngIf="license.Disabled" style="width:94px"><span class="glyphicon glyphicon-edit pointer" (click)="editLicense(i)" title="Edit"></span></td> 
+                                <td class="center-align" *ngIf="!license.Disabled" style="width:94px"><span class="glyphicon glyphicon-repeat pointer" (click)="undoLicense()" title="Undo"></span></td>
+                                <td class="center-align" style="width:94px"><span *ngIf="!license.Disabled" class="glyphicon glyphicon-floppy-disk pointer" (click)="saveLicense(i)" title="Save"></span></td>
+                            </tr>                           
                         </tbody>
                     </table>
-                </div>                
-            </div> 
+                </div>
+            </div>
         </md-card-content>
     </md-card>
 </div>
+
+
+
+<!--<div class="dim-background" *ngIf="LicenseModal">
+    <md-card class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-lg-offset-1 col-md-offset-1 mtb10 p0 md-elevation-z12">
+        <md-card-content class="p0">
+            <div>
+                <md-toolbar class="mbottom5 toolbar-small" color="primary">
+                    <div class="col-xs-12 p0 m0"><span>Client License</span> <button md-raised-button class="pull-right btn-small" (click)="LicenseModal=!LicenseModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
+                </md-toolbar>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
+                    <div class="row p0 m0">
+                        <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
+                            <md-input-container> <input mdInput class="" name="name" placeholder="Doctor" [(ngModel)]="SelectedLicense.Location +' '+SelectedLicense.LastName"
+                                    type="text" disabled></md-input-container>
+                        </div>
+
+                        <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
+                            <md-slide-toggle name="download" [checked]="SelectedLicense.Download"> Download </md-slide-toggle>
+                        </div>
+
+                        <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
+                            <md-slide-toggle name="upload" [checked]="SelectedLicense.Upload"> Upload </md-slide-toggle>
+                        </div>
+
+                        <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
+                            <md-slide-toggle name="status" [checked]="SelectedLicense.Status"> Status </md-slide-toggle>
+                        </div>
+
+                        <div class="col-md-1 col-sm-6 col-lg-1 col-xs-12">
+                            <button md-raised-button class="file-button btn-save" type="submit" value="Submit" (click)="updateLicese()">Update</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </md-card-content>
+    </md-card>
+</div>-->
