--- a/src/app/default-allocation/default-allocation.component.html
+++ b/src/app/default-allocation/default-allocation.component.html
@@ -11,27 +11,27 @@
         <div class="col-lg-12 col-md-12 col-sm-12 mtb10">
           <form (submit)="saveChanges()"> 
            <div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-              <md-input class="" name="client" #client placeholder="Client" [(ngModel)]="defaultAllocation.Client" type="text" autocomplete="off" required
+              <md-input-container>   <input mdInput class="" name="client" #client placeholder="Client" [(ngModel)]="defaultAllocation.Client" type="text" autocomplete="off" required
               [typeahead]="clients" (blur)="getDoctors()" (typeaheadOnSelect)="getDoctors()" [disabled]="!isNewDefaultAllocation" >
-              </md-input>
+              </md-input-container>
             </div>
             <div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-              <md-input class="" name="doctor" #doctor placeholder="Doctor" [(ngModel)]="defaultAllocation.Doctor" type="text" autocomplete="off" required [typeahead]="doctors" [typeaheadMinLength]="0" [disabled]="!isNewDefaultAllocation" ></md-input>
+              <md-input-container>   <input mdInput class="" name="doctor" #doctor placeholder="Doctor" [(ngModel)]="defaultAllocation.Doctor" type="text" autocomplete="off" required [typeahead]="doctors" [typeaheadMinLength]="0" [disabled]="!isNewDefaultAllocation" ></md-input-container>
             </div>
             <div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-              <md-input class="" name="jobLevel" #jobLevel placeholder="Job Level" [(ngModel)]="defaultAllocation.JobLevel" autocomplete="off" [disabled]="!isNewDefaultAllocation" [typeahead]="jobLevels" [typeaheadMinLength]="0" type="text" required
-                ></md-input>
+              <md-input-container>   <input mdInput class="" name="jobLevel" #jobLevel placeholder="Job Level" [(ngModel)]="defaultAllocation.JobLevel" autocomplete="off" [disabled]="!isNewDefaultAllocation" [typeahead]="jobLevels" [typeaheadMinLength]="0" type="text" required
+                ></md-input-container>
             </div>
             <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-              <md-input class="" name="employee" #employee placeholder="Employee" [(ngModel)]="defaultAllocation.Employee" type="text" required  autocomplete="off" [disabled]="!isNewDefaultAllocation" [typeahead]="employees"
-                ></md-input>
+              <md-input-container>   <input mdInput class="" name="employee" #employee placeholder="Employee" [(ngModel)]="defaultAllocation.Employee" type="text" required  autocomplete="off" [disabled]="!isNewDefaultAllocation" [typeahead]="employees"
+                ></md-input-container>
             </div>
             <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-              <md-input class="" name="accuracy" placeholder="Accuracy" [(ngModel)]="defaultAllocation.Accuracy" type="number" [disabled]="inputDisabled" min=1 max=100 step="0.01" required
-                ></md-input>
+              <md-input-container>   <input mdInput class="" name="accuracy" placeholder="Accuracy" [(ngModel)]="defaultAllocation.Accuracy" type="number" [disabled]="inputDisabled" min=1 max=100 step="0.01" required
+                ></md-input-container>
             </div> 
             <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-              <md-input class="" name="minutes" placeholder="Minutes (HH:MM)" (change)="validateMinutes()" [disabled]="inputDisabled" [(ngModel)]="defaultAllocation.Minutes" required type="text"></md-input>
+              <md-input-container>   <input mdInput class="" name="minutes" placeholder="Minutes (HH:MM)" (change)="validateMinutes()" [disabled]="inputDisabled" [(ngModel)]="defaultAllocation.Minutes" required type="text"></md-input-container>
             </div>
             <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12" *ngIf="!isNewDefaultAllocation" >
                 <md-checkbox [(ngModel)]="defaultAllocation.Inactive" name="inactive"  [disabled]="inputDisabled">Inactive</md-checkbox>
