--- a/src/app/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/doctor-dashboard/doctor-dashboard.component.html
@@ -14,16 +14,16 @@
 				</md-toolbar>
 				<div class="search col-md-12" *ngIf="showSearch.checked">
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="fromDate" placeholder="From Date" [(ngModel)]="SearchItem.FromDate" type="date"></md-input>
+						<md-input-container>   <input mdInput class="" name="fromDate" placeholder="From Date" [(ngModel)]="SearchItem.FromDate" type="date"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="toDate" placeholder="To Date" [(ngModel)]="SearchItem.ToDate" type="date"></md-input>
+						<md-input-container>   <input mdInput class="" name="toDate" placeholder="To Date" [(ngModel)]="SearchItem.ToDate" type="date"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SearchItem.JobNumber" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SearchItem.JobNumber" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="status" placeholder="Status" [(ngModel)]="SearchItem.Status" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="status" placeholder="Status" [(ngModel)]="SearchItem.JobStatus" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
 						<button md-raised-button type="submit" value="Submit" (click)="search()">Search</button>
