--- a/src/app/doctor-groups/doctor-groups.component.html
+++ b/src/app/doctor-groups/doctor-groups.component.html
@@ -72,7 +72,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 p0 bg-white">
 					<form (submit)="addDoctorGroup()">
 						<div class="col-md-9 col-sm-9 col-lg-9 col-xs-12">
-							<md-input class="" name="groupName" placeholder="Group Name" [(ngModel)]="SelectedGroup.Name" type="text" required></md-input>
+							<md-input-container>   <input mdInput class="" name="groupName" placeholder="Group Name" [(ngModel)]="SelectedGroup.Name" type="text" required></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-6 center-align">
 							<button md-raised-button class="file-button btn-save" type="submit" value="Submit">Create </button>
