--- a/src/app/doctors/doctors.component.html
+++ b/src/app/doctors/doctors.component.html
@@ -87,16 +87,16 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
                     <div class="row p0 m0">
                         <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-                            <md-input class="" name="name" placeholder="Doctor" [(ngModel)]="SelectedDoctor.FirstName +' '+SelectedDoctor.LastName" type="text" disabled></md-input>
+                            <md-input-container>   <input mdInput class="" name="name" placeholder="Doctor" [(ngModel)]="SelectedDoctor.FirstName +' '+SelectedDoctor.LastName" type="text" disabled></md-input-container>
                         </div>
 
                         <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-                            <md-input class="" name="client" placeholder="Client" title="SelectedDoctor.Client" [(ngModel)]="SelectedDoctor.Client" type="text"
-                                disabled></md-input>
+                            <md-input-container>   <input mdInput class="" name="client" placeholder="Client" title="SelectedDoctor.Client" [(ngModel)]="SelectedDoctor.Client" type="text"
+                                disabled></md-input-container>
                         </div>
 
                         <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-                            <md-input class="" name="name" placeholder="Template Name" title="NewTemplate.Name" [(ngModel)]="NewTemplate.Name" type="text"></md-input>
+                            <md-input-container>   <input mdInput class="" name="name" placeholder="Template Name" title="NewTemplate.Name" [(ngModel)]="NewTemplate.Name" type="text"></md-input-container>
                         </div>
 
                         <div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
