--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -61,7 +61,7 @@
 								<md-checkbox [(ngModel)]="job.Selected" name="job_selected" (change)="checkboxChanged(job,'MT')"></md-checkbox>
 							</td>
 							<td>{{job.JobDate}}</td>
-							<td> <a (click)="downloadAudioFile(job.AudioURL,job,'MT')"> {{job.JobNumber}}</a></td>
+							<td [title]="job.OriginalFileName"> <a (click)="downloadAudioFile(job.AudioURL,job,'MT')" class="pointer"> {{job.JobNumber}}</a></td>
 							<td><span class="glyphicon glyphicon-file pointer" title="Template" (click)="getTemplates(job.DoctorId)"></span></td>
 							<td><span class="glyphicon glyphicon-user pointer" *ngIf="job.PatientList.length>0" (click)="getPatientList(job)" title="Patient List"></span></td>
 							<td>{{job.Duration}}</td>
@@ -70,7 +70,7 @@
 							<td>{{job.AQA}}</td>
 							<td>{{job.QA}}</td>
 							<td>{{job.TAT}}</td>
-							<td><span *ngIf="job.DT" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'MT')"></span></td>
+							<td><span *ngIf="job.DT && (job.LevelStatus!='Completed' || job.JobLevel=='L1')" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'MT')"></span></td>
 							<td [title]="job.DT | date">{{job.DT | date:'shortTime'}}</td>
 							<td [title]="job.UT | date">{{job.UT | date:'shortTime'}}</td>
 							<td>{{job.Lines}}</td>
@@ -139,7 +139,7 @@
 								<md-checkbox [(ngModel)]="job.Selected" name="job_selected"></md-checkbox>
 							</td>
 							<td>{{job.JobDate}}</td>
-							<td> <a [href]="job.AudioURL" [download]="job.AudioURL" (click)="downloadAudioFile(job.AudioURL,job,'AQA')"> {{job.JobNumber}}</a></td>
+							<td [title]="job.OriginalFileName"> <a [href]="job.AudioURL"  class="pointer" (click)="downloadAudioFile(job.AudioURL,job,'AQA')"> {{job.JobNumber}}</a></td>
 							<td><span class="glyphicon glyphicon-file pointer" title="Template" (click)="getTemplates(job.DoctorId)"></span></td>
 							<td><span class="glyphicon glyphicon-user pointer" *ngIf="job.PatientList.length>0" (click)="getPatientList(job)" title="Patient List"></span></td>
 							<td>{{job.Duration}}</td>
@@ -150,7 +150,7 @@
 							</td>
 							<td>{{job.QA}}</td>
 							<td>{{job.TAT}}</td>
-							<td><span *ngIf="job.DT" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'AQA')"></span></td>
+							<td><span *ngIf="job.DT && job.MTUrl && job.LevelStatus!='Completed'" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'AQA')"></span></td>
 							<td [title]="job.DT | date">{{job.DT | date:'shortTime'}}</td>
 							<td [title]="job.UT | date">{{job.UT | date:'shortTime'}}</td>
 							<td>{{job.Lines}}</td>
@@ -219,7 +219,7 @@
 								<md-checkbox [(ngModel)]="job.Selected" name="job_selected"></md-checkbox>
 							</td>
 							<td>{{job.JobDate}}</td>
-							<td> <a (click)="downloadAudioFile(job.AudioURL,job,'QA')"> {{job.JobNumber}}</a></td>
+							<td [title]="job.OriginalFileName"> <a  class="pointer" (click)="downloadAudioFile(job.AudioURL,job,'QA')"> {{job.JobNumber}}</a></td>
 							<td><span class="glyphicon glyphicon-file pointer" title="Template" (click)="getTemplates(job.DoctorId)"></span></td>
 							<td><span class="glyphicon glyphicon-user pointer" *ngIf="job.PatientList.length>0" (click)="getPatientList(job)" title="Patient List"></span></td>
 							<td>{{job.Duration}}</td>
@@ -233,7 +233,7 @@
 								<a *ngIf="job.AQAUrl" (click)="getTranscriptFile(job,'QA',$event)"> <span class="glyphicon glyphicon-cloud-download pointer"></span></a>
 							</td>
 							<td>{{job.TAT}}</td>
-							<td><span *ngIf="job.DT" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'QA')"></span></td>
+							<td><span *ngIf="job.DT && ((job.AQA==null && job.MTUrl) || job.AQAUrl)" class="glyphicon glyphicon-cloud-upload pointer" (click)="uploadFile(job,'QA')"></span></td>
 							<td [title]="job.DT | date">{{job.DT | date:'shortTime'}}</td>
 							<td [title]="job.UT | date">{{job.UT | date:'shortTime'}}</td>
 							<td>{{job.Lines}}</td>
@@ -293,28 +293,28 @@
 				<form (submit)="postJob()" #newDocForm>
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-							<md-input class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input>
+							<md-input-container>   <input mdInput class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input-container>
 						</div>
 
 						<div class="col-md-5 col-sm-6 col-lg-5 col-xs-12">
-							<input #uploadEl type="file" ng2FileSelect [uploader]="uploader" name="trans_file" required />
+							<input #uploadEl type="file" ng2FileSelect [uploader]="uploader" name="trans_file" (change)="readFile($event)" required />
 						</div>
-						<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12 checkbox-container" *ngIf="SelectedJobLevel!='QA' && SelectedJob.JobLevel!='L1'">
-							<md-checkbox [(ngModel)]="IsPartialUpload" name="partial">Partial Upload</md-checkbox>
+						<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12 checkbox-container" *ngIf="SelectedJob.JobLevel!='QA' && SelectedJob.JobLevel!='L1'">
+							<md-checkbox [(ngModel)]="IsPartialUpload" name="partial" [disabled]="this.SelectedJob.LevelStatus == 'Partial'">Partial Upload</md-checkbox>
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="IsPartialUpload">
-							<md-input class="" name="jobDuration" placeholder="Job Duration" [(ngModel)]="SelectedJob.Duration" type="text" disabled></md-input>
-						</div>
-
-
-						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="IsPartialUpload">
-							<md-input class="" required name="startTime" placeholder="Start Time" [(ngModel)]="PartialUploadStartTime" type="text"></md-input>
+							<md-input-container>   <input mdInput class="" name="jobDuration" placeholder="Job Duration" [(ngModel)]="SelectedJob.Duration" type="text" disabled></md-input-container>
 						</div>
 
 
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="IsPartialUpload">
-							<md-input class="" required name="endTime" placeholder="End Time" [(ngModel)]="PartialUploadEndTime" type="text"></md-input>
+							<md-input-container>   <input mdInput class="" required name="startTime" placeholder="Start Time" [(ngModel)]="PartialUploadStartTime" type="text"></md-input-container>
+						</div>
+
+
+						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12" *ngIf="IsPartialUpload">
+							<md-input-container>   <input mdInput class="" required name="endTime" placeholder="End Time" [(ngModel)]="PartialUploadEndTime" type="text"></md-input-container>
 						</div>
 
 
