--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,15 +14,15 @@
  
 
           <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10 center-align logo">
-            <img src="../../logo.png" alt="">
+            <img src="../../images/logo.png" alt="">
           </div>
 
           <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-            <md-input class="" #username autocomplete="off" name="username" placeholder="Username/Email" [(ngModel)]="User.username" type="text" required ></md-input>
+            <md-input-container>   <input mdInput class="" #username autocomplete="off" name="username" placeholder="Username/Email" [(ngModel)]="User.username" type="text" required ></md-input-container>
           </div>
 
           <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-            <md-input class="" #password name="password" autocomplete="off" placeholder="Password" [(ngModel)]="User.password" type="password" required></md-input>
+            <md-input-container>   <input mdInput class="" #password name="password" autocomplete="off" placeholder="Password" [(ngModel)]="User.password" type="password" required></md-input-container>
           </div>
 
           <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align">
