--- a/src/app/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/manager-dashboard/manager-dashboard.component.html
@@ -52,28 +52,28 @@
 				</md-toolbar>
 				<div class="search col-md-12" *ngIf="showSearch.checked">
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="fromDate" placeholder="From Date" [(ngModel)]="SearchItem.FromDate" type="date"></md-input>
+						<md-input-container>   <input mdInput class="" name="fromDate" placeholder="From Date" [(ngModel)]="SearchItem.FromDate" type="date"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="toDate" placeholder="To Date" [(ngModel)]="SearchItem.ToDate" type="date"></md-input>
+						<md-input-container>   <input mdInput class="" name="toDate" placeholder="To Date" [(ngModel)]="SearchItem.ToDate" type="date"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="client" placeholder="Client" [(ngModel)]="SearchItem.Client" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="client" placeholder="Client" [(ngModel)]="SearchItem.Client" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="doctor" placeholder="Doctor" [(ngModel)]="SearchItem.Doctor" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="doctor" placeholder="Doctor" [(ngModel)]="SearchItem.Doctor" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="MT" placeholder="MT" [(ngModel)]="SearchItem.MT" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="MT" placeholder="MT" [(ngModel)]="SearchItem.MT" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="AQA" placeholder="AQA" [(ngModel)]="SearchItem.AQA" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="AQA" placeholder="AQA" [(ngModel)]="SearchItem.AQA" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="QA" placeholder="QA" [(ngModel)]="SearchItem.QA" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="QA" placeholder="QA" [(ngModel)]="SearchItem.QA" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-						<md-input class="" name="status" placeholder="Status" [(ngModel)]="SearchItem.Status" type="text"></md-input>
+						<md-input-container>   <input mdInput class="" name="status" placeholder="Status" [(ngModel)]="SearchItem.JobStatus" type="text"></md-input-container>
 					</div>
 					<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
 						<button md-raised-button type="submit" value="Submit" (click)="search()">Search</button>
